[package]
authors = ["Frequency"]
description = "Message Storage Pallet"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-messages"
publish = false
repository = "https://github.com/LibertyDSNP/frequency/"
version = "1.6.1+polkadot0.9.36"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [
  "derive",
] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = [
  "derive",
] }
# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.36" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }
cid = { version = "0.10", default-features = false }
multibase = { version ="0.9", default-features = false }

[dev-dependencies]
common-runtime = { path = '../../runtime/common', default-features = false }
# Testing dependencies
rand = "0.8.5"
pretty_assertions = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
]
std = [
  'codec/std',
  'scale-info/std',
  'sp-std/std',
  'sp-core/std',
  'sp-io/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'common-primitives/std',
  'common-runtime/std',
]
try-runtime = ['frame-support/try-runtime']
