[package]
authors = ["Frequency"]
description = "Message Storage Pallet"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-messages"
publish = false
repository = "https://github.com/frequency-chain/frequency/"
version = "0.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }
cid = { version = "0.11", default-features = false }
multibase = { version = "0.9", default-features = false }

[dev-dependencies]
common-runtime = { path = '../../runtime/common', default-features = false }
# Testing dependencies
rand = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "common-runtime/runtime-benchmarks",
]
std = [
  'parity-scale-codec/std',
  'scale-info/std',
  'sp-core/std',
  'sp-io/std',
  'sp-runtime/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'common-primitives/std',
  'common-runtime/std',
]
try-runtime = ['frame-support/try-runtime']
test = []

[lints]
workspace = true
