[package]
authors = ["Frequency"]
description = "Pallet for creating MSA"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-msa"
publish = false
repository = "https://github.com/libertyDSNP/frequency/"
version = "1.7.2+polkadot0.9.42"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.42" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }

[dev-dependencies]
common-runtime = { path = "../../runtime/common", default-features = false }
pallet-schemas = { path = "../schemas", default-features = false }
pallet-handles = { path = "../handles", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-keyring = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
pretty_assertions = { version = "1.3.0"}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "pallet-schemas/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "pallet-handles/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "pallet-schemas/std",
  "pallet-handles/std",
  "common-primitives/std",
  "common-runtime/std",
]
try-runtime = ["frame-support/try-runtime"]
