[package]
authors = ["Frequency"]
description = "Pallet for creating MSA"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "pallet-msa"
publish = false
repository = "https://github.com/frequency-chain/frequency/"
version = "1.12.0-rc1+polkadot1.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

scale-info = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-weights = { workspace = true }
# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
hex = { workspace = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
common-runtime = { path = "../../runtime/common", default-features = false }
pallet-schemas = { path = "../schemas", default-features = false }
pallet-handles = { path = "../handles", default-features = false }
pallet-collective = { workspace = true }
sp-keystore = { workspace = true }
sp-keyring = { workspace = true }
pretty_assertions = { workspace = true }
parking_lot = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "pallet-schemas/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "pallet-handles/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-core/std",
  "pallet-schemas/std",
  "pallet-handles/std",
  "common-primitives/std",
  "common-runtime/std",
  "pallet-collective/std",
  "log/std",
  "sp-io/std",
]
try-runtime = ["frame-support/try-runtime"]
