[package]
name = "pallet-dip-consumer"
authors = ["KILT <info@kilt.io>"]
documentation = "https://docs.kilt.io"
edition = "2021"
homepage = "https://kilt.io/"
license-file = "LICENSE"
description = "Pallet enabling receiving identity information from providers via the pallet-dip-provider pallet."
repository = "https://github.com/KILTprotocol/kilt-node"
# version = "1.11.0-dev"
version = "0.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36", default-features = false }
dip-support = { path = "../dip-support", default-features = false }
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36"}
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36"}
kilt-support = { path = "../kilt-support", default-features = false }
parity-scale-codec = {version = "3.1.5", default-features = false}
scale-info = {version = "2.2.0", default-features = false, features = [
  "derive",
]}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36"}

[dev-dependencies]
# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
  "cumulus-pallet-xcm/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-std/std",
  "dip-support/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
]
