[package]
name = "pallet-passkey"
description = "Provides a way to execute transactions using passkey signatures."
authors = ["Frequency"]
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
repository = "https://github.com/frequency-chain/frequency/"
publish = false
version = "0.0.1-rc3+polkadot1.13.0"

[dependencies]
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
log = { workspace = true, default-features = false }
p256 = { workspace = true }
base64-url = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
pallet-transaction-payment = { workspace = true }

# Frequency related dependencies
common-primitives = { default-features = false, path = "../../common/primitives" }
common-runtime = { path = "../../runtime/common", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-keystore = { workspace = true }
sp-keyring = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-benchmarking/std",
  "common-primitives/std",
  "common-runtime/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "common-primitives/runtime-benchmarks",
  "common-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
test = []